# Investment-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1085fdfcc518_initial_schema.py  2a8c4e2f1b00_reported_balance_and_cdi_range.py  3b0d1a4c2e11_fi_maturity_date_nullable.py  4c1d6e7a9f22_reports_period_key_unique.py  5d2e3f4a5b66_user_settings.py
backend/app/: config.py  main.py
backend/app/agent/: core.py  prompts.py  report_gen.py
backend/app/agent/tools/: fixed_income.py  fundamental.py  rebalance.py  sentiment.py  technical.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: analysis.py  chat.py  notifications.py  portfolio.py  reports.py  settings.py  watchlist.py
backend/app/data/: cache.py
backend/app/data/providers/: alpha_vantage.py  base.py  bcb.py  brapi.py  registry.py  yahoo.py
backend/app/models/: __init__.py  analysis.py  fixed_income.py  market_data.py  notification.py  report.py  settings.py  stock_position.py  watchlist.py
backend/app/scheduler/: jobs.py
backend/app/services/: csv_import.py  fixed_income_csv.py  notification.py  portfolio.py  position_enrichment.py  watchlist.py
backend/app/yield_engine/: calculator.py  projections.py  rates.py
frontend/: Dockerfile  next.config.js  package.json
frontend/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: app-shell.tsx  providers.tsx
frontend/src/hooks/: use-portfolio.ts  use-websocket.ts
nginx/: nginx.conf
(+36 files in other folders)
