[project]
name = "investment-agent-backend"
version = "0.1.0"
description = "Multi-Asset Investment AI Agent - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "openai>=1.60",
    "yfinance>=0.2",
    "pandas>=2.2,<3.0",
    "pandas-ta==0.4.71b0",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "redis>=5.2",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
